flappy-fun-main/k8s/manifests/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flappy-fun-dev
  labels:
    app.kubernetes.io/name: flappy-fun
    app.kubernetes.io/environment: dev
