flappy-fun-main/k8s/manifests/dev/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flappy-fun
  namespace: flappy-fun-dev
  labels:
    app.kubernetes.io/name: flappy-fun
    app.kubernetes.io/component: frontend
    app.kubernetes.io/environment: dev
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: flappy-fun
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flappy-fun
        app.kubernetes.io/component: frontend
        app.kubernetes.io/environment: dev
    spec:
      containers:
        - name: flappy-fun
          image: docker.io/maazjazelle/flappy-fun:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
