flappy-fun-main/k8s/manifests/dev/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flappy-fun
  namespace: flappy-fun-dev
  annotations:
    kubernetes.io/ingress.class: nginx   # 🔥 ADD THIS
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flappy-fun
                port:
                  number: 80
